--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/countdown" }
+  "builds": [
+    {
+      "src": "countdown.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "countdown.py"
+    }
   ]
 }
